--- a/tsconfig.json
+++ b/tsconfig.json
@@ -75,5 +75,5 @@
     "forceConsistentCasingInFileNames": true        /* Disallow inconsistently-cased references to the same file. */
   },
   "include": ["src/**/*.ts", "src/desafios/desafio4.js"],
-  "exclude": ["src/respostas"]
+  "exclude": ["src/gabarito"]
 }
